--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -9,7 +9,7 @@ pipeline {
             steps{
                  dir('todo-app') { 
                     // git credentialsId: 'f87a34a8-0e09-45e7-b9cf-6dc68feac670',
-                    url : "https://github.com/mishra808/todo-three-tier-django-react.git"
+                    url : "https://github.com/mishra808/todo-three-tier-django-react.git",
                     branch: "main"
                  }
             }
