--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -8,11 +8,11 @@ pipeline {
 
         stage("Git: Code Checkout"){
             steps{
-                //  dir('/home/ubuntu/todo-app') { 
+                  dir('/home/ubuntu/jenkins') { 
                     // git credentialsId: 'f87a34a8-0e09-45e7-b9cf-6dc68feac670',
                     git url : "https://github.com/mishra808/todo-three-tier-django-react.git",
                     branch: "main"
-                //  }
+                }
             }
             
         }
