--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -13,13 +13,15 @@ pipeline {
                     git url : "https://github.com/mishra808/todo-three-tier-django-react.git",
                     branch: "main"
                 // }
+
             }
             
         }
         stage ("Transfer code to Source Folder"){
-              steps{
-                sh 'cp -r /var/lib/jenkins /home/ubuntu/jenkins'
-              }
+            sh 'whoami'
+            //   steps{
+            //     sh 'cp -r /var/lib/jenkins /home/ubuntu/jenkins'
+            //   }
 
         }
     }
